<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#272F5E"
    tools:context=".CalculatorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="5dp"
            android:text="@string/twoHundredEuro"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/editText200euro"
            app:layout_constraintStart_toEndOf="@+id/editText50cent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <EditText
            android:id="@+id/editText200euro"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="17dp"
            android:background="#979797"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/editText100euro" />

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:backgroundTint="#D83C31"
            android:text="@string/calculate"
            android:textSize="20sp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonCalculatorBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <Button
            android:id="@+id/buttonCalculatorBack"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#D83C31"
            android:text="@string/back"
            android:textSize="20sp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:text="@string/iznos"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText100euro"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="17dp"
            android:background="#979797"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/editText50euro" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="120dp"
            android:text="@string/hundredEuro"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editText50cent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <EditText
            android:id="@+id/editText50euro"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="15dp"
            android:background="#979797"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/editText20euro" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="40dp"
            android:text="@string/fiftyEuro"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/editText50cent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <EditText
            android:id="@+id/editText20euro"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="15dp"
            android:background="#979797"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/editText10euro" />

        <EditText
            android:id="@+id/editText10euro"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="15dp"
            android:background="#979797"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/editText5euro" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="40dp"
            android:text="@string/tenEuro"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/editText10cent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="40dp"
            android:text="@string/twentyEuro"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/editText20cent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <EditText
            android:id="@+id/editText5euro"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="15dp"
            android:background="#979797"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/editText2euro" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="40dp"
            android:text="@string/fiveEuro"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/editText5cent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <EditText
            android:id="@+id/editText2euro"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="15dp"
            android:background="#979797"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/editText1euro" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="40dp"
            android:text="@string/twoEuro"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/editText2cent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/editText1euro"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="15dp"
            android:background="#979797"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/oneEuro"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/editText1cent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText50cent"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="11dp"
            android:background="#979797"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/editText20cent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:text="@string/fiftyCent"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/editText20cent"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="11dp"
            android:background="#979797"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/editText10cent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:text="@string/twentyCent"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/editText10cent"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="11dp"
            android:background="#979797"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/editText5cent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:text="@string/tenCent"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/editText5cent"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="11dp"
            android:background="#979797"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/editText2cent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:text="@string/fiveCent"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/editText2cent"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="#979797"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/editText1cent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/oneCent"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText1cent"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="17dp"
            android:background="#979797"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:text="@string/twoCent"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>